# CodingAgent

./: .env.example  .env.test  .gitignore  CLAUDE.md  CLI.md  Dockerfile  MONITORING_TEST.md  README.md  REVIEWER_TEST.md  WORKFLOW_TEST.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  code-agent.yml  reviewer-agent.yml
app/: __init__.py
app/api/: __init__.py  main.py  monitoring.py  streaming.py  tasks.py  websocket.py
app/cli/: __init__.py  config.py  dashboard.py  main.py  utils.py
app/core/: __init__.py  config.py  monitoring.py  task_manager.py
app/core/agents/: __init__.py  code_agent.py  reviewer_agent.py
app/core/llm/: __init__.py  openrouter.py  prompts.py
app/core/models/: __init__.py  task.py
app/core/tools/: __init__.py  github_tools.py
scripts/: tunnel.sh
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_cli.py
tests/unit/: test_agents.py  test_config.py  test_github_tools.py  test_llm_integration.py
